2003-09-30 Christian Schaller <Uraeus@gnome.org>

	* Added more icons to Amaranth
	* Undo my premature icon name changes
	* Try and get Wasp and Nuvola to work a little better
	  with the Red Hat beta

2003-09-26  Christian Schaller <Uraeus@gnome.org>

	* Added more Amaranth icons, more symlinks
	* Updates to Smooth engine files

2003-09-25  Christian Schaller <Uraeus@gnome.org>

	* Added new icons to Amaranth, started changing names for GNOME 2.4

2003-09-24  Jakub Steiner <jimmac@ximian.com>

	* COPYING: I just noticed gorilla was mentioned as LGPL for some
	  odd reason.
	
2003-09-01  Metin Amiroff  <metin@karegen.com>

	configure.in: Added "az" in ALL_LINGUAS.

2003-08-30  Wang Jian  <lark@linux.net.cn>

	* configure.in: Added "zh_CN" to ALL_LINGUAS.

2003-08-26  Changwoo Ryu  <cwryu@debian.org>

	* configure.in: Added "ko" to ALL_LINGUAS.

2003-08-25  Ole Laursen  <olau@hardworking.dk>

	* configure.in: Added "da" (Danish) to ALL_LINGUAS.

2003-08-22 Christian Schaller <Uraeus@gnome.org>
 
	* Added Amaranth to translation list
	* Updated Smooth engine to latest from Andrew
	* Fixed Wasp window managed maximize button, it is not aligned with
	  close button
	* Fix typo in Jakub's changelog entry ;)
	* Add gtkrc patch from Andrew to Nuvola

2003-08-22  Jakub Steiner <jimmac@ximian.com>

	* configure.in
	* Gorilla/icons/Makefile.am
	* Gorilla/icons/index.theme.in
	* Gorilla/icons/24x24/Makefile.am
	* Gorilla/icons/24x24/apps/Makefile.am
	* Gorilla/icons/24x24/apps/gnome-spinner-rest.png
	* Gorilla/icons/24x24/apps/gnome-spinner.png: spinner for Gorilla
	  (I'll investigate the possibility to make it svg as well)

2003-08-20  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "no" to ALL_LINGUAS.

2003-08-14 Christian Schaller <Uraeus@gnome.org>

	* Misc bug fixes
	* Most important being fixin of many of the emblem names
	  to make them more consistant with the base theme
	* tag for 0.3 release

2003-08-13 Christian Schaller <Uraeus@gnome.org>
	