@@ -29,12 +29,12 @@ EXTRA_DIST = $(icon_DATA)
 
 install-data-local:
 	mkdir -p $(DESTDIR)$(icondir)
-	cd $(icondir) && \
+	cd $(DESTDIR)$(icondir) && \
 	ln -sf gnome-mime-audio.svg gnome-mime-application-x-ogg.svg && \
 	ln -sf gnome-compressed.svg gnome-mime-application-x-stuffit.svg && \
 	ln -sf gnome-compressed.svg gnome-mime-application-x-tgz.svg
 
 uninstall-local:
-	rm -rf $(icondir)/gnome-mime-application-x-ogg.svg && \
-	rm -rf $(icondir)/gnome-mime-application-x-stuffit.svg && \
-	rm -rf $(icondir)/gnome-mime-application-x-tgz.svg
+	rm -rf $(DESTDIR)$(icondir)/gnome-mime-application-x-ogg.svg && \
+	rm -rf $(DESTDIR)$(icondir)/gnome-mime-application-x-stuffit.svg && \
+	rm -rf $(DESTDIR)$(icondir)/gnome-mime-application-x-tgz.svg
