@@ -1,3 +1,8 @@
+2003-10-12  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* Amaranth/icons/scalable/mimetypes/Makefile.am:
+	  Add DESTDIR variable.
+
 2003-09-30 Christian Schaller <Uraeus@gnome.org>
 
 	* Added more icons to Amaranth
